--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,20 @@
 services:
 
-    waha:
-        image: devlikeapro/waha:latest
-        container_name: wpp_bot_waha
-        restart: always
-        volumes:
-            - waha_data:/app
-        ports:
-            - '3000:3000'
+  waha:
+    image: devlikeapro/waha:latest
+    container_name: wpp_bot_waha
+    restart: always
 
-    api:
-        build:
-            context: .
-            dockerfile: Dockerfile.api
-        container_name: wpp_bot_api
-        ports:
-            - '5000:5000'
+    ports:
+      - '3000:3000'
 
-volumes:
-    waha_data:
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile.api
+    container_name: wpp_bot_api
+    ports:
+      - '5000:5000'
+    volumes:
+      - .:/app
+      - ./chroma_data:/app/chroma_data
